--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -5,6 +5,44 @@
 	box-sizing: border-box;
 }
 
+:root {
+	--body-background-color: #282828;
+	--header-background-color: #363435;
+	--danger: #e03337;
+	--white: #fff;
+	--black: #000;
+	--yellow: #ffdd0c;
+	// header config
+	--chapter-title-background-color: #ffdd0c;
+	--chapter-title-text-color: black;
+	--chapter-subtitle-background-color: #363435;
+	--chapter-subtitle-text-color: white;
+	--username-text-color: white;
+	// button config
+	--cta-border-color: var(--danger);
+	--cta-border-hover-color: var(--danger);
+	--cta-background-color: var(--danger);
+	--cta-text-color: var(--white);
+	--cta-background-hover-color: var(--white);
+	--cta-text-hover-color: var(--danger);
+	// main config
+	--main-background-color: #e3e1e6;
+
+	// tnf CTA config
+	--tnf-background-color: var(--white);
+	--tnf-border-color: #20252f;
+	--tnf-text-color: var(--black);
+	--tnf-background-hover-color: var(--black);
+	--tnf-border-hover-color: #20252f;
+	--tnf-text-hover-color: var(--white);
+	--tnf-background-disable-color: var(--black);
+	--tnf-border-disable-color: #20252f;
+	--tnf-text-disable-color: var(--white);
+	
+	// footer config
+	--footer-background-color: var(--white);
+}
+
 body,
 html {
 	width: 100%;
@@ -13,53 +51,41 @@ html {
 	font-optical-sizing: auto;
 	font-weight: 400;
 	font-style: normal;
-	background-color: #282828;
+	background-color: var(--body-background-color);
 }
-.hide{
+
+/* common css */
+.hide {
 	display: none;
-}
-.container {
-	min-height: 50%;
-	max-width: 1440px;
-	margin: 0 auto;
-	padding: 10px 45px 45px;
-	background-color: #e3e1e6;
-	width: 100%;
-}
-
-header, 
-footer{
-	max-width: 1440px;
-	margin: 0 auto;
-	padding: 20px 45px;
-	background-color: #d0d0d0;
-	width: 100%;
-}
-
-footer{
-	display: flex;
-	justify-content: space-between;
 }
 
 .textCenter {
 	text-align: center;
 }
-.btnSubmit {
-	border: 1px solid #222627;
-	background-color: #eeedf2;
-	color: #222627;
+
+button {
+	border: 1px solid var(--cta-border-color);
+	background-color: var(--cta-background-color);
+	color: var(--cta-text-color);
 	font-family: "Montserrat", sans-serif;
 	font-weight: 700;
 	font-size: 18px;
-
 	padding: 10px 25px;
 	border-radius: 5px;
 	cursor: pointer;
 	text-transform: uppercase;
+	white-space: nowrap;
 
 	&:hover {
-		background-color: #222627;
-		color: #eeedf2;
+		border-color: var(--cta-border-hover-color);
+		background-color: var(--cta-background-hover-color);
+		color: var(--cta-text-hover-color);
+
+		svg{
+			path{
+				stroke: var(--cta-text-hover-color);
+			}
+		}
 	}
 
 	&:disabled {
@@ -68,126 +94,325 @@ footer{
 		border: 1px solid rgba(16, 16, 16, 0.3);
 		background-color: rgba(0, 0, 0, 0);
 	}
+
+	svg{
+		vertical-align: middle;
+		path{
+			stroke: var(--cta-text-color);
+		}
+	}
 }
-.title {
-	font-size: 20px;
-}
-.description {
-	font-size: 16px;
-	font-weight: normal;
-}
-#options {
+
+.mainContainer {
 	display: flex;
-	gap: 20px;
-	justify-content: center;
+	flex-direction: column;
 	align-items: center;
 
-	.btnTF {
-		width: 150px;
-		height: 150px;
-		cursor: pointer;
-		font-size: 30px;
-		background-color: #fff;
-		border-radius: 10px;
-		border: 2px solid #20252f;
-		text-transform: uppercase;
-		font-weight: bold;
-
-		&:disabled {
-			cursor: default;
-			color: #fff;
-			background: #000;
-		}
+	.section {
+		max-width: 1440px;
+		width: 100%;
 	}
 }
 
-.optionHolder {
-	padding: 0;
+header {
+	background-color: var(--header-background-color);
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
 
-	.option {
-		margin: 0;
+	.chapter {
 		display: flex;
-		align-items: center;
-		font-weight: 600;
-	}
+		font-size: 20px;
 
-	span {
-		height: 44px;
-		width: 44px;
-		min-width: 44px;
-		border-radius: 5px;
-		background-color: #fda715;
-		color: #222627;
-		font-weight: bold;
-		font-size: 25px;
-		text-align: center;
-		line-height: 42px;
-
-		&.active {
-			background-color: #22353c;
-			color: #fff;
-		}
-	}
-
-	> li {
-		margin-top: 10px;
-		padding: 8px;
-		border: 2px solid;
-		border-radius: 5px;
-		background-color: #fff;
-		display: flex;
-		gap: 10px;
-		cursor: pointer;
-
-		&:hover {
-			span {
-				background-color: #22353c;
-				color: #fff;
-			}
-		}
-
-		&.active {
-			span {
-				background-color: #22353c;
-				color: #fff;
-			}
-		}
-	}
-}
-
-#reviewHolder{
-	.answered{
-		background-color: #198754;
-		color: white;
-		padding: 5px 10px;
-		border-radius: 5px;
-	}
-
-	.unanswered{
-		background-color: #dc3545;
-		color: white;
-		padding: 5px 10px;
-		border-radius: 5px;
-	}
-
-	ul{
-		list-style: none;
-		margin: 0;
-		padding: 0;
-		background-color: white;
-
-		>li{
-			display: flex;
-			justify-content: space-between;
-			border: 1px solid #ccc;
-			border-bottom: none;
+		.title {
 			padding: 10px;
-			cursor: pointer;
-			align-items: center;
+			background-color: var(--chapter-title-background-color);
+			color: var(--chapter-title-text-color);
+			font-weight: 600;
+		}
 
-			&:last-child{
-				border-bottom: 1px solid #ccc;
+		.subtitle {
+			padding: 10px;
+			background-color: var(--chapter-subtitle-background-color);
+			color: var(--chapter-subtitle-text-color);
+			font-weight: 600;
+		}
+	}
+
+	.user {
+		display: flex;
+		padding: 10px;
+		font-size: 20px;
+
+		.userName {
+			color: var(--username-text-color);
+		}
+
+		.userImage {
+			width: 25px;
+			height: 25px;
+			border-radius: 20px;
+			margin-left: 10px;
+		}
+	}
+}
+
+main {
+	min-height: calc(100vh - 110px);
+	background-color: var(--main-background-color);
+	width: 100%;
+	display: flex;
+	
+	img{
+		width: 100%;
+		height: auto;
+	}
+
+	&.intro{
+		.left{
+			padding: 45px;
+			background-color: #eeedf2;
+		}
+
+		.right{
+			background-color: #eeedf2;
+		}
+	}
+
+	&.questionSection{
+		.left{
+			width: 30%;
+			overflow: hidden;
+			object-fit: cover;
+			position: relative;
+	
+			img{
+				width: 100%;
+				height: 100%;
+				display: block;
+				object-fit: cover;
+				position: absolute;
+			}
+		}
+	
+		.right{
+			width: 70%;
+			padding: 45px;
+		}
+		
+		.title {
+			font-size: 20px;
+		}
+	
+		.description {
+			font-size: 16px;
+			font-weight: normal;
+		}
+	
+		.questionCount{
+			border-bottom: 4px solid #000;
+			display: inline-block;
+			padding-bottom: 5px;
+		}
+	
+		.timer{
+			padding: 10px;
+			display: inline-block;
+			background-color: white;
+			margin-bottom: 20px;
+			font-weight: 600;
+	
+			svg{
+				vertical-align: middle;
+			}
+		}
+	
+		#options {
+			display: flex;
+			gap: 20px;
+			justify-content: center;
+			align-items: center;
+	
+			.btnTF {
+				width: 150px;
+				height: 150px;
+				cursor: pointer;
+				font-size: 30px;
+				border-radius: 10px;
+				text-transform: uppercase;
+				font-weight: bold;
+				background-color: var(--tnf-background-color);
+				color: var(--tnf-text-color);
+				border: 2px solid var(--tnf-border-color);
+	
+				&:hover{
+					color: var(--tnf-text-hover-color);
+					background: var(--tnf-background-hover-color);
+					border-color: var(--tnf-border-hover-color);
+				}
+	
+				&:disabled {
+					cursor: default;
+					color: var(--tnf-text-disable-color);
+					background: var(--tnf-background-disable-color);
+					border-color: var(--tnf-border-disable-color);
+				}
+			}
+		}
+	
+		.optionHolder {
+			padding: 0;
+	
+			.option {
+				margin: 0;
+				display: flex;
+				align-items: center;
+				font-weight: 600;
+			}
+	
+			span {
+				height: 44px;
+				width: 44px;
+				min-width: 44px;
+				border-radius: 5px;
+				background-color: #fda715;
+				color: #222627;
+				font-weight: bold;
+				font-size: 25px;
+				text-align: center;
+				line-height: 42px;
+	
+				&.active {
+					background-color: #22353c;
+					color: #fff;
+				}
+			}
+	
+			> li {
+				margin-top: 10px;
+				padding: 8px;
+				border: 2px solid;
+				border-radius: 5px;
+				background-color: #fff;
+				display: flex;
+				gap: 10px;
+				cursor: pointer;
+	
+				&:hover {
+					span {
+						background-color: #22353c;
+						color: #fff;
+					}
+				}
+	
+				&.active {
+					span {
+						background-color: #22353c;
+						color: #fff;
+					}
+				}
 			}
 		}
 	}
+	
+
+	&.reviewSection{
+		flex-direction: column;
+		padding: 45px;
+
+		.top{
+			background-color: var(--yellow);
+			display: flex;
+			padding: 30px 60px;
+			font-size: 40px;
+			gap: 20px;
+		}
+
+		button{
+			font-size: 30px;
+		}
+
+		.left{
+			width: 30%;
+			overflow: hidden;
+			object-fit: cover;
+			position: relative;
+	
+			img{
+				width: 100%;
+				height: 100%;
+				display: block;
+				object-fit: cover;
+				position: absolute;
+			}
+		}
+	
+		.right{
+			width: 70%;
+			padding: 45px;
+		}
+
+		#reviewHolder {
+			.answered {
+				padding: 5px 10px;
+				border-radius: 5px;
+			}
+	
+			.unanswered {
+				color: var(--danger);
+				padding: 5px 10px;
+				border-radius: 5px;
+			}
+	
+			ul {
+				list-style: none;
+				margin: 0;
+				padding: 0;
+				background-color: white;
+	
+				> li {
+					display: flex;
+					justify-content: space-between;
+					border: 1px solid #ccc;
+					border-bottom: none;
+					padding: 10px;
+					align-items: center;
+					gap: 20px;
+					cursor: pointer;
+	
+					&:last-child {
+						border-bottom: 1px solid #ccc;
+					}
+	
+					&:nth-child(even){
+						background-color: #efefef;
+					}
+				}
+				.header{
+					pointer-events: none;
+					background-color: var(--yellow);
+					padding: 10px 20px;
+					font-weight: 600;
+				}
+	
+				.content{
+					white-space: nowrap;
+					overflow: hidden;
+					text-overflow: ellipsis;
+	
+					svg{
+						vertical-align: middle;
+					}
+				}
+			}
+		}
+	}
+}
+
+footer {
+	padding: 10px 20px;
+	background-color: var(--footer-background-color);
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
 }
