--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -435,6 +435,41 @@ main {
 					}
 				}
 			}
+
+			&.matching{
+				margin: 0;
+				padding: 0;
+				display: flex;
+				list-style: none;
+				flex-flow: column;
+				border-bottom: 1px solid var(--black);
+
+				>li{
+					display: flex;
+					padding: 0;
+					border: 0;
+					margin: 0;
+					gap: 0;
+				}
+
+				.selectBoxHolder{
+					width: 20%;
+					border: 1px solid var(--black);
+					border-bottom: none;
+					padding: 10px;
+				}
+
+				select{
+					width: 100%;
+				}
+
+				.selectLabel{
+					width: 80%;
+					border-top: 1px solid var(--black);
+					border-right: 1px solid var(--black);
+					padding: 10px 20px;
+				}
+			}
 		}
 	}
 
