--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -40,7 +40,8 @@
 	--tnf-background-disable-color: var(--black);
 	--tnf-border-disable-color: #20252f;
 	--tnf-text-disable-color: var(--white);
-
+	// end screen
+	--end-correct-background-color: #4ce052;
 	// footer config
 	--footer-background-color: var(--white);
 }
@@ -382,95 +383,6 @@ main {
 				}
 			}
 		}
-
-		.optionHolder {
-			padding: 0;
-
-			.option {
-				margin: 0;
-				display: flex;
-				align-items: center;
-				font-weight: 600;
-			}
-
-			span {
-				height: 44px;
-				width: 44px;
-				min-width: 44px;
-				border-radius: 5px;
-				background-color: #fda715;
-				color: #222627;
-				font-weight: bold;
-				font-size: 25px;
-				text-align: center;
-				line-height: 42px;
-
-				&.active {
-					background-color: #22353c;
-					color: #fff;
-				}
-			}
-
-			> li {
-				margin-top: 10px;
-				padding: 8px;
-				border: 2px solid;
-				border-radius: 5px;
-				background-color: #fff;
-				display: flex;
-				gap: 10px;
-				cursor: pointer;
-
-				&:hover {
-					span {
-						background-color: #22353c;
-						color: #fff;
-					}
-				}
-
-				&.active {
-					span {
-						background-color: #22353c;
-						color: #fff;
-					}
-				}
-			}
-
-			&.matching{
-				margin: 0;
-				padding: 0;
-				display: flex;
-				list-style: none;
-				flex-flow: column;
-				border-bottom: 1px solid var(--black);
-
-				>li{
-					display: flex;
-					padding: 0;
-					border: 0;
-					margin: 0;
-					gap: 0;
-				}
-
-				.selectBoxHolder{
-					width: 20%;
-					border: 1px solid var(--black);
-					border-bottom: none;
-					padding: 10px;
-				}
-
-				select{
-					width: 100%;
-				}
-
-				.selectLabel{
-					width: 80%;
-					border-top: 1px solid var(--black);
-					border-right: 1px solid var(--black);
-					padding: 10px 20px;
-				}
-			}
-		}
 	}
 
 	&.reviewSection {
@@ -526,6 +438,106 @@ main {
 			padding: 45px;
 			overflow-y: auto;
 		}
+
+		.optionHolder{
+			padding-left: 30px;
+
+			>li{
+				pointer-events: none;
+			}
+		}
+	}
+
+	.optionHolder {
+		padding: 0;
+
+		.option {
+			margin: 0;
+			display: flex;
+			align-items: center;
+			font-weight: 600;
+		}
+
+		span {
+			height: 44px;
+			width: 44px;
+			min-width: 44px;
+			border-radius: 5px;
+			background-color: #fda715;
+			color: #222627;
+			font-weight: bold;
+			font-size: 25px;
+			text-align: center;
+			line-height: 42px;
+
+			&.active {
+				background-color: #22353c;
+				color: #fff;
+			}
+		}
+
+		> li {
+			margin-top: 10px;
+			padding: 8px;
+			border: 2px solid;
+			border-radius: 5px;
+			background-color: #fff;
+			display: flex;
+			gap: 10px;
+			cursor: pointer;
+
+			&:hover {
+				span {
+					background-color: #22353c;
+					color: #fff;
+				}
+			}
+
+			&.active {
+				span {
+					background-color: #22353c;
+					color: #fff;
+				}
+			}
+			&.correct{
+				background-color: var(--end-correct-background-color);
+			}
+		}
+
+		&.matching{
+			margin: 0;
+			padding: 0;
+			display: flex;
+			list-style: none;
+			flex-flow: column;
+			border-bottom: 1px solid var(--black);
+
+			>li{
+				display: flex;
+				padding: 0;
+				border: 0;
+				margin: 0;
+				gap: 0;
+			}
+
+			.selectBoxHolder{
+				width: 20%;
+				border: 1px solid var(--black);
+				border-bottom: none;
+				padding: 10px;
+			}
+
+			select{
+				width: 100%;
+			}
+
+			.selectLabel{
+				width: 80%;
+				border-top: 1px solid var(--black);
+				border-right: 1px solid var(--black);
+				padding: 10px 20px;
+			}
+		}
 	}
 
 	.listing {
@@ -546,15 +558,18 @@ main {
 			border-radius: 5px;
 		}
 
-		> li {
+		.optionContainer{
+			padding: 10px 30px;
+		}
+
+		>li{
 			display: flex;
 			justify-content: space-between;
-			border: 1px solid #ccc;
-			border-bottom: none;
 			padding: 10px;
-			align-items: center;
 			gap: 20px;
 			cursor: pointer;
+			border: 1px solid #ccc;
+			border-bottom: none;
 
 			&:last-child {
 				border-bottom: 1px solid #ccc;
@@ -564,6 +579,7 @@ main {
 				background-color: #efefef;
 			}
 		}
+
 		.header {
 			pointer-events: none;
 			background-color: var(--yellow);
@@ -575,6 +591,7 @@ main {
 			white-space: nowrap;
 			overflow: hidden;
 			text-overflow: ellipsis;
+			width: 100%;
 
 			svg {
 				vertical-align: middle;
