--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -111,11 +111,6 @@ button {
 	text-transform: uppercase;
 	white-space: nowrap;
 
-	@include media(allTouchDevice){
-		padding: 5px 10px;
-		font-size: 17px;
-	}
-
 	&:hover {
 		border-color: var(--cta-border-hover-color);
 		background-color: var(--cta-background-hover-color);
@@ -161,13 +156,6 @@ button {
 		width: 100%;
 		height: 700px;
 		padding: 0 5px;
-
-		@include media(allTouchDevice){
-			display: flex;
-			flex-flow: row;
-			height: 100vh;
-			background-color: var(--main-background-color);
-		}
 	}
 }
 
@@ -253,13 +241,6 @@ header {
 	}
 }
 
-.main{
-	@include media(allTouchDevice){
-		order: 3;
-		margin-top: 110px;
-	}
-}
-
 main {
 	height: 592px;
 	background-color: var(--main-background-color);
@@ -335,20 +316,11 @@ main {
 				object-fit: cover;
 				position: absolute;
 			}
-
-			@include media(allTouchDevice){
-				display: none;
-			}
 		}
 
 		.right {
 			width: 70%;
 			padding: 45px;
-
-			@include media(allTouchDevice){
-				padding: 15px;
-				width: 100%;
-			}
 		}
 
 		.title {
@@ -373,7 +345,8 @@ main {
 			background-color: white;
 			margin-bottom: 20px;
 			font-weight: 600;
-
+			white-space: nowrap;
+			
 			svg {
 				vertical-align: middle;
 			}
@@ -664,13 +637,6 @@ main {
 }
 
 footer {
-	@include media(allTouchDevice){
-		order: 2;
-		padding: 10px 15px;
-		margin-top: 56px;
-    	position: fixed;
-	}
-
 	padding: 10px 20px;
 	background-color: var(--footer-background-color);
 	width: 100%;
