Code Cleanup and some fixes
matching template issue fixes
code cleanup

--- a/css/stylesheet-mobile.scss
+++ b/css/stylesheet-mobile.scss
@@ -333,10 +333,24 @@ main {
             }
         }
 
+		.question{
+			@include media(allTouchDevice){
+				display: block;
+			}
+		}
+
 		.contentHolder{
 			> div{
 				@include media(allTouchDevice){
 					width: 140px;
+				}
+			}
+
+			&.open{
+				>div{
+					@include media(allTouchDevice){
+						opacity: 0;
+					}
 				}
 			}
 		}
