--- a/css/stylesheet-mobile.css
+++ b/css/stylesheet-mobile.css
@@ -1,1 +1,347 @@
-@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){body{height:auto}}.desktopOnly{display:block}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){.desktopOnly{display:none !important}}.mobileOnly{display:none}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){.mobileOnly{display:block}}.desktopOnlyInline{display:inline-block}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){.desktopOnlyInline{display:none !important}}.mobileOnlyInline{display:none}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){.mobileOnlyInline{display:inline-block}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){button{padding:5px 10px;font-size:17px}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){.mainContainer{overflow-y:auto}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){.mainContainer .section{display:flex;flex-flow:column;min-height:100vh;background-color:var(--main-background-color);padding:0}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){header{position:fixed;top:0;left:0;order:1;z-index:1}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){header .chapter .title{display:none}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){header .chapter .subtitle{padding:10px 15px;font-size:16px;font-weight:400;height:56px}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){header .user{display:none}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){.main{order:3;margin-top:110px;height:100%}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main{height:100%;flex-flow:column;padding-bottom:20px}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.introSection{flex-direction:column;overflow-y:auto;height:100%;padding-bottom:0}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.introSection .left{padding:15px;width:100%}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.introSection .left h1{font-size:3.5em}}main.introSection .right{width:100%}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.introSection .whiteBox{font-size:14px;margin-top:0}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.instructionSection{height:100%;overflow-y:auto}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.instructionSection .holder{padding:15px}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.questionSection{overflow-y:auto;height:100%}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.questionSection .left{display:none}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.questionSection .right{padding:15px;width:100%}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.questionSection .timer{font-size:14px}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.questionSection .timer svg{width:20px}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.reviewSection{padding:0;height:100%}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.reviewSection .top{padding:15px;flex-flow:column;font-size:25px;gap:20px}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.reviewSection button{font-size:20px;padding:20px}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.reviewSection #reviewHolder{padding:0 15px 20px}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.endSection{height:100%}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.endSection .holder{padding:15px}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main.endSection .optionHolder{padding-left:0}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main .optionHolder.matching{gap:20px;border-bottom:0}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main .optionHolder.matching>li{flex-flow:column}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main .optionHolder.matching .selectBoxHolder{width:100%;order:2;border-top:0;border-bottom:1px solid var(--black)}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main .optionHolder.matching .selectLabel{width:100%;order:1;border-left:1px solid var(--black);padding:10px 10px 10px 5px}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main #optionHolderForMobile{margin-top:20px}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main #optionHolderForMobile>li{width:100%;border-radius:0;border-left:1px solid var(--black);padding:10px;gap:10px}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main .listing>li{position:relative;flex-flow:column}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main .listing .question{display:block}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main .listing .contentHolder>div{width:140px}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main .listing .contentHolder.open>div{opacity:0}}main .listing .unanswered,main .listing .answered{position:absolute;right:0}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){main .listing .header{flex-flow:row}}@media screen and (max-width: 820px)and (orientation: portrait),screen and (max-width: 896px)and (orientation: landscape){footer{order:2;padding:10px 15px;margin-top:56px;position:fixed;border-bottom:1px solid var(--gray)}}
+/* @import "./../css/normalizer.scss";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"); */
+/* 
+/** Mixins
+*/
+/* * {
+	box-sizing: border-box;
+} */
+/* :root {
+	--body-background-color: #282828;
+	--header-background-color: #363435;
+	--danger: #e03337;
+	--success: #61a654;
+	--white: #fff;
+	--black: #000;
+	--yellow: #ffdd0c;
+	// header config
+	--chapter-title-background-color: #ffdd0c;
+	--chapter-title-text-color: black;
+	--chapter-subtitle-background-color: #363435;
+	--chapter-subtitle-text-color: white;
+	--username-text-color: white;
+	// button config
+	--cta-border-color: var(--danger);
+	--cta-border-hover-color: var(--danger);
+	--cta-background-color: var(--danger);
+	--cta-text-color: var(--white);
+	--cta-background-hover-color: var(--white);
+	--cta-text-hover-color: var(--danger);
+	// main config
+	--main-background-color: #e3e1e6;
+
+	// tnf CTA config
+	--tnf-background-color: var(--white);
+	--tnf-border-color: #20252f;
+	--tnf-text-color: var(--black);
+	--tnf-background-hover-color: var(--black);
+	--tnf-border-hover-color: #20252f;
+	--tnf-text-hover-color: var(--white);
+	--tnf-background-disable-color: var(--black);
+	--tnf-border-disable-color: #20252f;
+	--tnf-text-disable-color: var(--white);
+	// end screen
+	--end-correct-background-color: #4ce052;
+	// footer config
+	--footer-background-color: var(--white);
+} */
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  body {
+    height: auto;
+  }
+}
+
+.desktopOnly {
+  display: block;
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  .desktopOnly {
+    display: none !important;
+  }
+}
+
+.mobileOnly {
+  display: none;
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  .mobileOnly {
+    display: block;
+  }
+}
+
+.desktopOnlyInline {
+  display: inline-block;
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  .desktopOnlyInline {
+    display: none !important;
+  }
+}
+
+.mobileOnlyInline {
+  display: none;
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  .mobileOnlyInline {
+    display: inline-block;
+  }
+}
+
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  button {
+    padding: 5px 10px;
+    font-size: 17px;
+  }
+}
+
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  .mainContainer {
+    overflow-y: auto;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  .mainContainer .section {
+    display: flex;
+    flex-flow: column;
+    min-height: 100vh;
+    background-color: var(--main-background-color);
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    order: 1;
+    z-index: 1;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  header .chapter .title {
+    display: none;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  header .chapter .subtitle {
+    padding: 10px 15px;
+    font-size: 16px;
+    font-weight: 400;
+    height: 56px;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  header .user {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  .main {
+    order: 3;
+    margin-top: 110px;
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main {
+    height: 100%;
+    flex-flow: column;
+    padding-bottom: 20px;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.introSection {
+    flex-direction: column;
+    overflow-y: auto;
+    height: 100%;
+    padding-bottom: 0;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.introSection .left {
+    padding: 15px;
+    width: 100%;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.introSection .left h1 {
+    font-size: 3.5em;
+  }
+}
+main.introSection .right {
+  width: 100%;
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.introSection .whiteBox {
+    font-size: 14px;
+    margin-top: 0;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.instructionSection {
+    height: 100%;
+    overflow-y: auto;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.instructionSection .holder {
+    padding: 15px;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.questionSection {
+    overflow-y: auto;
+    height: 100%;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.questionSection .left {
+    display: none;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.questionSection .right {
+    padding: 15px;
+    width: 100%;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.questionSection .timer {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.questionSection .timer svg {
+    width: 20px;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.reviewSection {
+    padding: 0;
+    height: 100%;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.reviewSection .top {
+    padding: 15px;
+    flex-flow: column;
+    font-size: 25px;
+    gap: 20px;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.reviewSection button {
+    font-size: 20px;
+    padding: 20px;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.reviewSection #reviewHolder {
+    padding: 0 15px 20px;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.endSection {
+    height: 100%;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.endSection .holder {
+    padding: 15px;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.endSection .optionHolder {
+    padding-left: 0;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.endSection .optionHolder > li {
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main .optionHolder.matching {
+    gap: 20px;
+    border-bottom: 0;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main .optionHolder.matching > li {
+    flex-flow: column;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main .optionHolder.matching .selectBoxHolder {
+    width: 100%;
+    order: 2;
+    border-top: 0;
+    border-bottom: 1px solid var(--black);
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main .optionHolder.matching .selectLabel {
+    width: 100%;
+    order: 1;
+    border-left: 1px solid var(--black);
+    padding: 10px 10px 10px 5px;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main #optionHolderForMobile {
+    margin-top: 20px;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main #optionHolderForMobile > li {
+    width: 100%;
+    border-radius: 0;
+    border-left: 1px solid var(--black);
+    padding: 10px;
+    gap: 10px;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main .listing > li {
+    position: relative;
+    flex-flow: column;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main .listing .question {
+    display: block;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main .listing .contentHolder > div {
+    width: 140px;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main .listing .contentHolder.open > div {
+    opacity: 0;
+  }
+}
+main .listing .unanswered,
+main .listing .answered {
+  position: absolute;
+  right: 0;
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main .listing .header {
+    flex-flow: row;
+  }
+}
+
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  footer {
+    order: 2;
+    padding: 10px 15px;
+    margin-top: 56px;
+    position: fixed;
+    border-bottom: 1px solid var(--gray);
+  }
+}/*# sourceMappingURL=stylesheet-mobile.css.map */
