matching template selection

--- a/css/stylesheet-mobile.scss
+++ b/css/stylesheet-mobile.scss
@@ -287,6 +287,13 @@ main {
         flex-direction: row;
       }
     }
+
+    .correctAnswer,
+		.yourAnswer{
+      @include media(allTouchDevice){
+        width: auto;
+      }
+		}
   }
 
   .optionHolder {
