--- a/css/stylesheet-mobile.css
+++ b/css/stylesheet-mobile.css
@@ -270,6 +270,12 @@ main.introSection .right {
   }
 }
 @media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
+  main.endSection .correctAnswer,
+  main.endSection .yourAnswer {
+    width: auto;
+  }
+}
+@media screen and (max-width: 820px) and (orientation: portrait), screen and (max-width: 896px) and (orientation: landscape) {
   main .optionHolder.matching {
     gap: 20px;
     border-bottom: 0;
